Shadow problem on iOS fixed
- no shadows behind cards on overview
- slide to payout works now on Android and iOS

refs #2128 @0.5h

--- a/src/app/overview/overview.component.tns.css
+++ b/src/app/overview/overview.component.tns.css
@@ -14,6 +14,10 @@
     color: blue;
 }
 
+.card {
+    background-color: white;
+}
+
 .card-title {
     margin: 5 0;
     font-weight: bold;
